타이틀 변경 및 배경색 업데이트

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Home
 ---
 <section class="home-section">
     <header class="home-header">
-        <h1 class="home-title">Mika's Blog</h1>
-        <p class="home-subtitle">개발자 Mika의 기술 블로그</p>
+        <h1 class="home-title">HELLO, UNKNOWN</h1>
+        <p class="home-subtitle">Mika's Uncharted Log</p>
     </header>
 
     <nav class="category-tabs">
