--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@ title: Home
 
     <nav class="category-tabs">
         <button class="tab-btn active" data-category="all">All</button>
-        {% for item in site.navigation %}
-        <button class="tab-btn" data-category="{{ item.title | downcase }}">{{ item.title }}</button>
-        {% endfor %}
+        <button class="tab-btn" data-category="bridge">Bridge</button>
+        <button class="tab-btn" data-category="insight">Insight</button>
+        <button class="tab-btn" data-category="lab">Lab</button>
+        <button class="tab-btn" data-category="log">Log</button>
     </nav>
 
     <div class="posts-grid" id="posts-grid">
         {% for post in site.posts %}
-        {% assign cat = post.categories | first | default: "Uncategorized" %}
-        <article class="card" data-category="{{ cat | downcase }}">
+        {% assign cat = post.categories | first | downcase | default: "uncategorized" %}
+        <article class="card" data-category="{{ cat }}">
             <a href="{{ post.url | relative_url }}" class="card-link">
                 <div class="card-header">
-                    <span class="card-badge badge-{{ cat | downcase }}">{{ cat }}</span>
+                    <span class="card-badge badge-{{ cat }}">{{ post.categories | first }}</span>
                     <time class="card-date">{{ post.date | date: "%Y.%m.%d" }}</time>
                 </div>
                 <h2 class="card-title">{{ post.title }}</h2>
@@ -39,6 +40,10 @@ title: Home
         </article>
         {% endfor %}
     </div>
+
+    {% if site.posts.size == 0 %}
+    <p style="text-align: center; color: #888; padding: 40px;">아직 작성된 글이 없습니다.</p>
+    {% endif %}
 </section>
 
 <script>
