--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ title: Home
         <button class="tab-btn" data-category="insight">Insight</button>
         <button class="tab-btn" data-category="lab">Lab</button>
         <button class="tab-btn" data-category="log">Log</button>
+        <button class="tab-btn" data-category="project">Project</button>
     </nav>
 
     <div class="posts-grid" id="posts-grid">
